feat(i18n): 添加多语言支持和登录相关翻译
refactor(ui): 重构左侧菜单栏和顶部应用栏组件
style: 格式化代码并修复缩进问题
chore: 更新依赖项和添加开发文档

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -17,6 +17,12 @@
   "save": "Save",
   "cancel": "Cancel",
   "loading": "Loading...",
+  "login": "Login",
+  "logout": "Logout",
+  "register": "Register",
+  "email": "Email",
+  "password": "Password",
+  "confirmPassword": "Confirm Password",
   "error": "Error",
   "noData": "No data available",
   "retry": "Retry",
@@ -30,5 +36,5 @@
   "clear": "Clear",
   "add": "Add",
   "edit": "Edit",
-  "update": "Update" 
+  "update": "Update"
 }
