--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,40 +1,191 @@
 {
   "@@locale": "en",
-  "appTitle": "Listenor",
-  "appDescription": "Listenor is a powerful tool for managing and interacting with your audio content.",
-  "settings": "Settings",
   "about": "About",
-  "help": "Help",
-  "version": "Version",
-  "language": "Language",
-  "theme": "Theme",
-  "darkMode": "Dark Mode",
-  "lightMode": "Light Mode",
-  "systemDefault": "System Default",
-  "notifications": "Notifications",
-  "enableNotifications": "Enable Notifications",
-  "disableNotifications": "Disable Notifications",
-  "save": "Save",
-  "cancel": "Cancel",
-  "loading": "Loading...",
-  "login": "Login",
-  "logout": "Logout",
-  "register": "Register",
-  "email": "Email",
-  "password": "Password",
-  "confirmPassword": "Confirm Password",
-  "error": "Error",
-  "noData": "No data available",
-  "retry": "Retry",
-  "success": "Success",
-  "delete": "Delete",
-  "confirmDelete": "Are you sure you want to delete this?",
-  "yes": "Yes",
-  "no": "No",
-  "search": "Search",
-  "searchPlaceholder": "Search...",
-  "clear": "Clear",
+  "@about": {
+    "description": "Label for about section"
+  },
   "add": "Add",
+  "@add": {
+    "description": "Label for add action"
+  },
+  "appDescription": "Listenor is a powerful tool for managing and interacting with your audio content.",
+  "@appDescription": {
+    "description": "Main description of the application"
+  },
+  "appTitle": "Listenor",
+  "@appTitle": {
+    "description": "The application name"
+  },
+  "cancel": "Cancel",
+  "@cancel": {
+    "description": "Label for cancel action"
+  },
+  "clear": "Clear",
+  "@clear": {
+    "description": "Label for clear action"
+  },
+  "confirmDelete": "Are you sure you want to delete this?",
+  "@confirmDelete": {
+    "description": "Confirmation message before deletion"
+  },
+  "confirmPassword": "Confirm Password",
+  "@confirmPassword": {
+    "description": "Label for password confirmation field"
+  },
+  "darkMode": "Dark Mode",
+  "@darkMode": {
+    "description": "Label for dark mode theme option"
+  },
+  "delete": "Delete",
+  "@delete": {
+    "description": "Label for delete action"
+  },
+  "disableNotifications": "Disable Notifications",
+  "@disableNotifications": {
+    "description": "Label for disabling notifications"
+  },
   "edit": "Edit",
-  "update": "Update"
+  "@edit": {
+    "description": "Label for edit action"
+  },
+  "email": "Email",
+  "@email": {
+    "description": "Label for email field"
+  },
+  "enableNotifications": "Enable Notifications",
+  "@enableNotifications": {
+    "description": "Label for enabling notifications"
+  },
+  "error": "Error",
+  "@error": {
+    "description": "Generic error message"
+  },
+  "haveAccount": "Have an account? Login",
+  "@haveAccount": {
+    "description": "Prompt for login action"
+  },
+  "help": "Help",
+  "@help": {
+    "description": "Label for help section"
+  },
+  "home": "Home",
+  "@home": {
+    "description": "Label for home section"
+  },
+  "language": "Language",
+  "@language": {
+    "description": "Label for language settings"
+  },
+  "lightMode": "Light Mode",
+  "@lightMode": {
+    "description": "Label for light mode theme option"
+  },
+  "loading": "Loading...",
+  "@loading": {
+    "description": "Loading state message"
+  },
+  "login": "Login",
+  "@login": {
+    "description": "Label for login action"
+  },
+  "loginOrSignUp": "Login / Sign up",
+  "@loginOrSignUp": {
+    "description": "Label for login or sign up action"
+  },
+  "logout": "Logout",
+  "@logout": {
+    "description": "Label for logout action"
+  },
+  "moreAction": "More Actions",
+  "@moreAction": {
+    "description": "Label for more actions menu"
+  },
+  "no": "No",
+  "@no": {
+    "description": "Negative response"
+  },
+  "noAccount": "No account? Sign up",
+  "@noAccount": {
+    "description": "Prompt for sign up action"
+  },
+  "noData": "No data available",
+  "@noData": {
+    "description": "Message shown when no data is available"
+  },
+  "notifications": "Notifications",
+  "@notifications": {
+    "description": "Label for notifications section"
+  },
+  "orLoginWithThose": "Or login with those accounts",
+  "@orLoginWithThose": {
+    "description": "Prompt for login with other accounts"
+  },
+  "password": "Password",
+  "@password": {
+    "description": "Label for password field"
+  },
+  "register": "Register",
+  "@register": {
+    "description": "Label for register action"
+  },
+  "retry": "Retry",
+  "@retry": {
+    "description": "Label for retry action"
+  },
+  "save": "Save",
+  "@save": {
+    "description": "Label for save action"
+  },
+  "search": "Search",
+  "@search": {
+    "description": "Label for search action"
+  },
+  "searchPlaceholder": "Search...",
+  "@searchPlaceholder": {
+    "description": "Placeholder text for search input"
+  },
+  "settings": "Settings",
+  "@settings": {
+    "description": "Label for settings section"
+  },
+  "success": "Success",
+  "@success": {
+    "description": "Success message"
+  },
+  "systemDefault": "System Default",
+  "@systemDefault": {
+    "description": "Label for system default theme option"
+  },
+  "theme": "Theme",
+  "@theme": {
+    "description": "Label for theme settings"
+  },
+  "pleaseInputEmailAddress": "Please input email address",
+  "@pleaseInputEmailAddress": {
+    "description": "Prompt for email address input"
+  },
+  "pleaseInputValidEmailAddress": "Please input valid email address",
+  "@pleaseInputValidEmailAddress": {
+    "description": "Prompt for valid email address input"
+  },
+  "pleaseInputPassword": "Please input password",
+  "@pleaseInputPassword": {
+    "description": "Prompt for password input"
+  },
+  "pleaseInputValidPassword": "Please input valid password",
+  "@pleaseInputValidPassword": {
+    "description": "Prompt for valid password input"
+  },
+  "update": "Update",
+  "@update": {
+    "description": "Label for update action"
+  },
+  "version": "Version",
+  "@version": {
+    "description": "Label for version information"
+  },
+  "yes": "Yes",
+  "@yes": {
+    "description": "Positive response"
+  }
 }
