feat(支付): 添加订阅和支付页面功能
- 新增订阅页面和支付页面组件
- 添加 loading_animation_widget 依赖实现加载动画
- 更新多语言支持新增订阅相关文案
- 重构用户菜单添加订阅入口和复制功能
- 移除旧的 stripe 支付实现文件

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -32,6 +32,10 @@
   "@confirmPassword": {
     "description": "Label for password confirmation field"
   },
+  "copyToClipboard": "Copy to Clipboard",
+  "@copyToClipboard": {
+    "description": "Label for copy to clipboard action"
+  },
   "darkMode": "Dark Mode",
   "@darkMode": {
     "description": "Label for dark mode theme option"
@@ -99,6 +103,10 @@
   "moreAction": "More Actions",
   "@moreAction": {
     "description": "Label for more actions menu"
+  },
+  "mySubscription": "My Subscription",
+  "@mySubscription": {
+    "description": "Label for my subscription menu item"
   },
   "no": "No",
   "@no": {
