feat(支付): 添加订阅功能及相关页面
添加Stripe支付服务集成，实现订阅功能
新增定价页面、订阅计划和订阅状态页面
更新用户模型以支持订阅状态
添加多语言支持
配置Android和iOS权限

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -132,6 +132,10 @@
   "@password": {
     "description": "Label for password field"
   },
+  "pricing": "Pricing",
+  "@pricing": {
+    "description": "Label for pricing section"
+  },
   "register": "Register",
   "@register": {
     "description": "Label for register action"
@@ -155,6 +159,14 @@
   "settings": "Settings",
   "@settings": {
     "description": "Label for settings section"
+  },
+  "subscribe": "Subscribe",
+  "@subscribe": {
+    "description": "Label for subscribe action"
+  },
+  "subscriptionStatus": "Subscription Status",
+  "@subscriptionStatus": {
+    "description": "Label for subscription status section"
   },
   "success": "Success",
   "@success": {
@@ -191,6 +203,10 @@
   "version": "Version",
   "@version": {
     "description": "Label for version information"
+  },
+  "vip": "VIP",
+  "@vip": {
+    "description": "Label for VIP section"
   },
   "yes": "Yes",
   "@yes": {
