feat: 添加支付功能及相关组件
- 新增支付页面和订阅页面
- 添加支付相关模型和服务
- 实现Stripe支付集成
- 添加全局Snackbar组件
- 优化用户认证流程
- 添加多语言支持
- 更新依赖项

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -132,6 +132,14 @@
   "@password": {
     "description": "Label for password field"
   },
+  "pay": "Pay",
+  "@pay": {
+    "description": "Label for pay action"
+  },
+  "paidSuccessful": "Paid Successful!",
+  "@paidSuccessful" : {
+    "description": "Label for paid successful"
+  },
   "pricing": "Pricing",
   "@pricing": {
     "description": "Label for pricing section"
@@ -207,6 +215,10 @@
   "vip": "VIP",
   "@vip": {
     "description": "Label for VIP section"
+  }, 
+  "waitingPayment": "Waiting payment...",
+  "@waitingPayment": {
+    "description": "Label for waiting payment state"
   },
   "yes": "Yes",
   "@yes": {
