feat(支付): 添加订单页面并重构支付流程
- 新增订单页面(MyOrderPage)及相关模型(AppOrder)
- 重构支付流程，支持购买数量参数
- 移除旧的订阅页面(SubscriptionPage和SubscriptionScreen)
- 更新多语言支持，添加"我的订单"和"购买"翻译
- 修改顶部导航栏跳转逻辑
- 更新Stripe服务接口，支持产品价格查询
- 调整配置文件中Stripe产品ID格式

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -117,6 +117,7 @@
   "@moreAction": {
     "description": "Label for more actions menu"
   },
+  "myOrder": "My Order",
   "mySubscription": "My Subscription",
   "@mySubscription": {
     "description": "Label for my subscription menu item"
@@ -187,6 +188,7 @@
   "@pricing": {
     "description": "Label for pricing section"
   },
+  "purchase": "Purchase",
   "register": "Register",
   "@register": {
     "description": "Label for register action"
