feat(支付): 添加升级计划和订单历史功能
实现升级计划页面和我的订单页面，包括以下改进：
- 添加多语言支持
- 修改AppOrder模型以支持新字段
- 优化价格显示逻辑
- 添加订单历史查询接口
- 改进UI展示和错误处理

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -241,6 +241,7 @@
   "@update": {
     "description": "Label for update action"
   },
+  "upgradePlan": "Upgrade",
   "version": "Version",
   "@version": {
     "description": "Label for version information"
