--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -241,6 +241,7 @@
   "@update": {
     "description": "更新操作按钮"
   },
+  "upgradePlan": "Upgrade",
   "version": "版本",
   "@version": {
     "description": "版本信息"
